<resources>
    <string name="app_name">RepairOrder</string>
    <string name="name_label">Name!@@@@@</string>
    <string name="app_name_header">Repair order!!</string>
    <string name="subheader">subheader!!</string>
    <string name="order_type">Order Type</string>
    <string name="technician">Technician</string>
    <string name="inspection">Inspection</string>
    <string name="paint">Paint</string>
    <string name="parts">Parts</string>
    <string name="labor">Labor</string>
    <string name="textview">TextView</string>
    <string name="submit">Submit</string>
    <string name="_0_0">$0.0</string>
    <string name="total">Total</string>
    <string name="tax">Tax</string>
    <string name="subtotal">Subtotal</string>
</resources>