<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RepairOrderActivity">

    <TextView
        android:id="@+id/app_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="584dp"
        android:text="@string/app_name_header"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="173dp"
        android:text="@string/subheader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name_header" />

    <TextView
        android:id="@+id/orderType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/order_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subheader" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/labor" />

    <TextView
        android:id="@+id/technician"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/technician"
        app:layout_constraintStart_toStartOf="@+id/orderType"
        app:layout_constraintTop_toBottomOf="@+id/orderType" />

    <EditText
        android:id="@+id/technicianField"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/orderTypeField"
        app:layout_constraintTop_toTopOf="@+id/technician" />

    <TextView
        android:id="@+id/inspection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/inspection"
        app:layout_constraintStart_toStartOf="@+id/orderType"
        app:layout_constraintTop_toBottomOf="@+id/technician" />

    <EditText
        android:id="@+id/inspectionField"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/orderTypeField"
        app:layout_constraintTop_toTopOf="@+id/inspection" />

    <TextView
        android:id="@+id/paint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/paint"
        app:layout_constraintStart_toStartOf="@+id/orderType"
        app:layout_constraintTop_toBottomOf="@+id/inspection" />

    <EditText
        android:id="@+id/paintField"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/orderTypeField"
        app:layout_constraintTop_toTopOf="@+id/paint" />

    <TextView
        android:id="@+id/parts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/parts"
        app:layout_constraintStart_toStartOf="@+id/orderType"
        app:layout_constraintTop_toBottomOf="@+id/paint" />

    <TextView
        android:id="@+id/labor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/labor"
        app:layout_constraintStart_toStartOf="@+id/orderType"
        app:layout_constraintTop_toBottomOf="@+id/parts" />

    <EditText
        android:id="@+id/partsField"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/orderTypeField"
        app:layout_constraintTop_toTopOf="@+id/parts" />

    <EditText
        android:id="@+id/laborField"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/orderTypeField"
        app:layout_constraintTop_toTopOf="@+id/labor" />

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/subtotal"
        app:layout_constraintStart_toStartOf="@+id/orderTypeField"
        app:layout_constraintTop_toBottomOf="@+id/laborField" />

    <TextView
        android:id="@+id/tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tax"
        app:layout_constraintStart_toStartOf="@+id/orderTypeField"
        app:layout_constraintTop_toBottomOf="@+id/subtotal" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="@+id/orderTypeField"
        app:layout_constraintTop_toBottomOf="@+id/tax" />

    <TextView
        android:id="@+id/subtotalField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0"
        app:layout_constraintStart_toEndOf="@+id/laborField"
        app:layout_constraintTop_toTopOf="@+id/subtotal" />

    <TextView
        android:id="@+id/taxField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0"
        app:layout_constraintStart_toEndOf="@+id/laborField"
        app:layout_constraintTop_toTopOf="@+id/tax" />

    <TextView
        android:id="@+id/totalField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0"
        app:layout_constraintStart_toEndOf="@+id/laborField"
        app:layout_constraintTop_toTopOf="@+id/total" />

    <Spinner
        android:id="@+id/orderTypeField"
        android:layout_width="134dp"
        android:layout_height="48dp"
        android:layout_marginEnd="50dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orderType" />

</androidx.constraintlayout.widget.ConstraintLayout>